--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "diamond-embroidery-calculator",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Diamond embroidery calculator",
   "keywords": [],
   "author": "Stanislav Torman",
@@ -19,7 +19,9 @@
     "copy-thems-prod": "node -e \"require('fs-extra').copy('build-themes-prod', 'prod');\"",
     "build-thems-dev": "webpack --config ./webpack.config.js --env development build_themes --progress",
     "build-thems-prod": "webpack --config ./webpack.config.js --env production build_themes --progress",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "npm-clear-cache": "npm cache clean --force",
+    "better-audit": "better-npm-audit audit"
   },
   "repository": "https://github.com/stanislav0305/Diamond-Embroidery-Calculator",
   "publish": {
@@ -49,56 +51,55 @@
       "output": "dist"
     }
   },
+  "engines": {
+    "node": ">=18.17.0"
+  },
   "devDependencies": {
-    "css-loader": "^6.8.1",
-    "electron": "^30.0.9",
-    "electron-builder": "^24.6.4",
+    "css-loader": "^7.1.2",
+    "electron": "^32.1.0",
+    "electron-builder": "^25.0.5",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.3",
-    "image-minimizer-webpack-plugin": "^4.0.0",
-    "imagemin": "^8.0.1",
+    "html-webpack-plugin": "^5.6.0",
+    "image-minimizer-webpack-plugin": "^4.1.0",
+    "imagemin": "^9.0.0",
     "imagemin-gifsicle": "^7.0.0",
     "imagemin-jpegtran": "^7.0.0",
     "imagemin-optipng": "^8.0.0",
-    "imagemin-svgo": "^10.0.1",
-    "mini-css-extract-plugin": "^2.7.6",
-    "sass-loader": "^13.3.2",
-    "ts-loader": "^9.5.0",
-    "typescript": "^5.4.3",
-    "webpack": "^5.89.0",
+    "imagemin-svgo": "^11.0.1",
+    "mini-css-extract-plugin": "^2.9.1",
+    "sass-loader": "^16.0.1",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.6.2",
+    "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@tanstack/react-table": "^8.16.0",
-    "@types/electron-progressbar": "^1.2.6",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
+    "@tanstack/react-table": "^8.20.5",
+    "@types/electron-progressbar": "^1.2.7",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
     "@types/react-text-mask": "^5.4.14",
     "@types/text-mask-addons": "^3.8.4",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "bootswatch": "^5.3.3",
-    "electron-log": "^5.1.2",
+    "electron-log": "^5.2.0",
     "electron-progressbar": "^2.2.1",
     "electron-store": "^8.2.0",
-    "electron-updater": "^6.2.1",
+    "electron-updater": "^6.3.4",
     "formik": "^2.4.6",
-    "material-react-table": "^2.13.0",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.10.2",
-    "react-dom": "^18.2.0",
+    "material-react-table": "^3.0.1",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
-    "react-number-format": "^5.3.4",
-    "react-router-dom": "^6.24.0",
+    "react-number-format": "^5.4.2",
+    "react-router-dom": "^6.26.2",
     "react-text-mask": "^5.5.0",
     "rxjs": "^7.8.1",
-    "sass": "^1.75.0",
+    "sass": "^1.78.0",
     "short-unique-id": "^5.2.0",
     "text-mask-addons": "^3.8.0",
     "yup": "^1.4.0"
-  },
-  "overrides": {
-    "got": "^11.8.3",
-    "semver-regex": "^3.1.3"
   }
 }
